# upower

./: Makefile  PLIST  PLIST.Linux  README.md  buildlink3.mk  distinfo  options.mk
files/netbsd/: meson.build  up-backend.c  up-native.c
patches/: patch-etc_meson.build  patch-meson.build  patch-meson__options.txt  patch-src_meson.build
